Bug 123592 - The DVD Video Project does not add the -dvd-compat or -dvd-video parameter to growisofs
Summary: The DVD Video Project does not add the -dvd-compat or -dvd-video parameter to...
Status: RESOLVED FIXED
Alias: None
Product: k3b
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Trueg
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-03-14 08:18 UTC by Glenn McCarthy
Modified: 2006-06-11 21:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Full debug output from k3b (190.21 KB, text/plain)
2006-06-04 15:11 UTC, Richard Ash
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Glenn McCarthy 2006-03-14 08:18:27 UTC
Version:           0.12.14 (using KDE KDE 3.5.1)
Installed from:    Gentoo Packages
Compiler:          gcc version 3.4.5 CFLAGS "-march=athlon-xp -O2 -pipe"
OS:                Linux

In k3b 0.12.14, I select the DVD Video Project, it creates the appropriate filesystem (e.g. VIDEO_TS and AUDIO_TS folders), I drag my compilation into the VIDEO_TS folder, and hit burn.

Unfortunately, the DVD produced does not play in mplayer, or my standalone DVD player.  Mplayer quits with this info...

Playing dvd://1.
Reading disc structure, please wait...
libdvdread: Can't open file VIDEO_TS.IFO.
Can't open VMG info!
File not found: '1'
Failed to open dvd://1

It seems the problem is due to the disk not using a UDF file-structure, as seen here...

mount -t udf /dev/dvd /mnt/dvd
mount: wrong fs type, bad option, bad superblock on /dev/dvd

If I burn the exact same VOB, IFO files on the command-line using...

growisofs -dvd-compat -Z /dev/dvd -dvd-video DVD/

The disk works perfectly, it appears the command-line K3B is passing to growisofs is not including the -dvd-compat and -dvd-video options, as seen in this debug output.

System
-----------------------
K3b Version: 0.12.14

KDE Version: 3.5.1
QT Version:  3.3.4
Kernel:      2.6.15-gentoo-r5
Devices
-----------------------
BENQ DVD DD DW1650 BCDC (/dev/hdc, ) at  [CD-R; CD-RW; CD-ROM; DVD-ROM; DVD-R; DVD-RW; DVD-R DL; DVD+R; DVD+RW; DVD+R DL] [DVD-ROM; DVD-R Sequential; DVD-R Dual Layer Sequential; DVD-R Dual Layer Jump; DVD-RW Restricted Overwrite; DVD-RW Sequential; DVD+RW; DVD+R; DVD+R Double Layer; CD-ROM; CD-R; CD-RW] [SAO; TAO; RAW; SAO/R96R; RAW/R16; RAW/R96R; Restricted Overwrite; Layer Jump]

Used versions
-----------------------
growisofs: 6.1
mkisofs: 2.1.1a05

growisofs
-----------------------
  0.03% done, estimate finish Tue Mar 14 19:24:44 2006
  0.05% done, estimate finish Tue Mar 14 19:24:44 2006
***Cut for readability***
 99.96% done, estimate finish Tue Mar 14 19:31:37 2006
 99.98% done, estimate finish Tue Mar 14 19:31:37 2006
Total translation table size: 0
Total rockridge attributes bytes: 1269
Total directory bytes: 4096
Path table size(bytes): 42
Max brk space used 0
1948371 extents written (3805 MB)
/dev/hdc: flushing cache
/dev/hdc: updating RMA
/dev/hdc: closing session

growisofs command:
-----------------------
/usr/bin/growisofs -Z /dev/hdc -use-the-force-luke=notray -use-the-force-luke=tty -speed=8 -use-the-force-luke=bufsize:32m -gui -graft-points -volid K3b data project -volset  -appid K3B THE CD KREATOR (C) 1998-2005 SEBASTIAN TRUEG AND THE K3B TEAM -publisher  -preparer  -sysid LINUX -volset-size 1 -volset-seqno 1 -sort /tmp/kde-glenn/k3bgRxBCb.tmp -rational-rock -hide-list /tmp/kde-glenn/k3b2Co5Mb.tmp -joliet -hide-joliet-list /tmp/kde-glenn/k3bDjHvwb.tmp -full-iso9660-filenames -iso-level 2 -path-list /tmp/kde-glenn/k3b7x8L3b.tmp
Comment 1 Sebastian Trueg 2006-03-14 12:18:50 UTC
what a stupid bug. I will fix that. thanks for the hint.
Comment 2 Sebastian Trueg 2006-03-14 13:25:08 UTC
SVN commit 518527 by trueg:

Use K3bDataItem::writtenName instead of K3bDataItem::k3bName for Iso9660 filename creation for verification.
Properly set the multisession mode to NONE for Video DVD projects.

BUG: 123592


 M  +5 -0      ChangeLog  
 M  +1 -1      libk3b/core/k3bcore.h  
 M  +1 -1      libk3b/projects/datacd/k3bdatadoc.cpp  
 M  +2 -1      libk3b/projects/videodvd/k3bvideodvddoc.cpp  
 M  +1 -1      src/main.cpp  


--- branches/stable/extragear/multimedia/k3b/ChangeLog #518526:518527
@@ -1,3 +1,8 @@
+0.12.15
+=======
+ * Fixed on-the-fly Video DVD creation
+ * Fixed data project verification in case filenames had to be shortened due to Joliet limitations.
+
 0.12.14
 =======
  * Make sure new projects are not already marked as modified.
--- branches/stable/extragear/multimedia/k3b/libk3b/core/k3bcore.h #518526:518527
@@ -23,7 +23,7 @@
 
 
 
-#define LIBK3B_VERSION "0.12.14"
+#define LIBK3B_VERSION "0.12.15"
 
 #define k3bcore K3bCore::k3bCore()
 
--- branches/stable/extragear/multimedia/k3b/libk3b/projects/datacd/k3bdatadoc.cpp #518526:518527
@@ -1525,7 +1525,7 @@
 
   // recreate parameters from the original method
   int dirflag = ( item->isDir() ? 1 : 0 );
-  char* name = strdup( item->k3bName().local8Bit() );
+  char* name = strdup( item->writtenName().local8Bit() );
 
   // for some reason I did not include the mkisofs option -use-fileversion in K3bIsoOptions
   // so we use the default in mkisofs
--- branches/stable/extragear/multimedia/k3b/libk3b/projects/videodvd/k3bvideodvddoc.cpp #518526:518527
@@ -27,7 +27,6 @@
 K3bVideoDvdDoc::K3bVideoDvdDoc( QObject* parent )
   : K3bDvdDoc( parent )
 {
-  setMultiSessionMode( NONE );
 }
 
 
@@ -52,6 +51,8 @@
     audioTsDir->setMoveable(false);
     audioTsDir->setHideable(false);
 
+    setMultiSessionMode( NONE );
+
     setModified( false );
 
     return true;
--- branches/stable/extragear/multimedia/k3b/src/main.cpp #518526:518527
@@ -39,7 +39,7 @@
 
 #include <config.h>
 
-static const char* appVersion = "0.12.14-svn";
+static const char* appVersion = "0.12.15-svn";
 static const char* description = I18N_NOOP("A CD and DVD burning application");
 
 
Comment 3 Stefan Tittel 2006-06-04 00:44:52 UTC
I still encounter this bug with 0.12.15 trying to burn a DVD+R DL. Maybe you didn't fix it for dual-layer discs?

[System] K3b Version: 0.12.15
[System] KDE Version: 3.5.2
[System] QT Version:  3.3.6
[System] Kernel:      2.6.16-gentoo-r7
[Devices] PIONEER DVD-ROM DVD-120S 1.25 (/dev/hdd, ) at /mnt/dvd-rom [CD-ROM; DVD-ROM] [DVD-ROM; CD-ROM] [None]
[Devices] _NEC DVD_RW ND-4550A 1.08 (/dev/hdc, ) at /mnt/dvd-ram [CD-R; CD-RW; CD-ROM; DVD-ROM; DVD-RAM; DVD-R; DVD-RW; DVD-R DL; DVD+R; DVD+RW; DVD+R DL] [DVD-ROM; DVD-R Sequential; DVD-R Dual Layer Sequential; DVD-RAM; DVD-RW Restricted Overwrite; DVD-RW Sequential; DVD+RW; DVD+R; DVD+R Double Layer; CD-ROM; CD-R; CD-RW] [SAO; TAO; RAW; SAO/R96P; SAO/R96R; RAW/R16; RAW/R96P; RAW/R96R; Restricted Overwrite]
[Used versions] growisofs: 6.1
[Used versions] mkisofs: 2.1.1a05
[growisofs command:] /usr/bin/growisofs -Z /dev/hdc -use-the-force-luke=notray -use-the-force-luke=tty -speed=2.4 -use-the-force-luke=bufsize:16m -gui -graft-points -volid WEDDING -volset  -appid K3B THE CD KREATOR (C) 1998-2005 SEBASTIAN TRUEG AND THE K3B TEAM -publisher  -preparer  -sysid LINUX -volset-size 1 -volset-seqno 1 -sort /tmp/kde-tittel/k3bP538tc.tmp -rational-rock -hide-list /tmp/kde-tittel/k3b2SLopa.tmp -joliet -hide-joliet-list /tmp/kde-tittel/k3bG0HFSb.tmp -full-iso9660-filenames -iso-level 2 -path-list /tmp/kde-tittel/k3bYAMfxa.tmp 
Comment 4 Richard Ash 2006-06-04 15:09:42 UTC
just tried the current SVN checkout. Console output:

k3b: ***** mkisofs parameters:
k3b: /usr/bin/mkisofs -gui -graft-points -volid NaSTA06 - Golden Bodges -volset
 -appid K3B THE CD KREATOR (C) 1998-2005 SEBASTIAN TRUEG AND THE K3B TEAM -publisher York Student Television -preparer Richard Ash -sysid LINUX -volset-size 1 -volset-seqno 1 -sort /tmp/kde-ra/k3bJEyGoa.tmp -rational-rock -hide-list /tmp/kde-ra/k3b1dJwha.tmp -joliet -hide-joliet-list /tmp/kde-ra/k3b1z6MFa.tmp -full-iso9660-filenames -iso-level 2 -path-list /tmp/kde-ra/k3b1EYTaa.tmp -dvd-video -f /tmp/kde-ra/k3bVideoDvd0 
k3b: (mkisofs) Warning: Disabling Joliet support for DVD-Video.
k3b: (mkisofs) Total translation table size: 0
k3b: (mkisofs) Total rockridge attributes bytes: 1689
k3b: (mkisofs) Total directory bytes: 4096
k3b: (mkisofs) Path table size(bytes): 42
k3b: (mkisofs) Max brk space used 0
k3b: (K3bJobProgressDialog) received finished signal!
k3b: (K3bProjectBurnDialog) job done. cleaning up.

The net result is a DVD image, but using ISO9660 file system. This won't work in most consumer DVD players or any linux software player.
Just a hunch, but shouldn't the rockridge and joliet stuff be off for a video dvd?
Comment 5 Richard Ash 2006-06-04 15:11:32 UTC
Created attachment 16469 [details]
Full debug output from k3b

This is the result of Debug output > Save in k3b after creating the image.
Comment 6 Sebastian Trueg 2006-06-04 19:18:12 UTC
I know. It is hopefully solved now in 0.12.16. will release soon.