Use K3bDataItem::writtenName instead of K3bDataItem::k3bName for Iso9660 filename creation for verification. Properly set the multisession mode to NONE for Video DVD projects.

BUG: 123592

svn path=/branches/stable/extragear/multimedia/k3b/; revision=518527